--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-forecast-io",
-  "version": "1.0.0-beta.2",
+  "version": "1.1.0",
   "description": "Ember Forecast.io addon",
   "keywords": [
     "ember-addon",
